--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require": {
         "ext-pdo": "*",
-        "ext-mysqli": "*"
+        "ext-mysqli": "*",
+        "jenssegers/blade": "^2.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
