--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
         }
     },
     "require": {
+        "php": "^8.3",
         "ext-pdo": "*",
         "ext-mysqli": "*",
-        "jenssegers/blade": "^2.0"
+        "jenssegers/blade": "^2.0",
+        "illuminate/view": "^11.7.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
