--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "ext-pdo": "*",
         "ext-mysqli": "*",
-        "eftec/bladeone": "^4.18"
+        "eftec/bladeone": "^4.18",
+        "phpoffice/phpspreadsheet": "^4.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
