--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "ext-pdo": "*",
         "ext-mysqli": "*",
         "eftec/bladeone": "^4.18",
-        "phpoffice/phpspreadsheet": "^4.4"
+        "phpoffice/phpspreadsheet": "^4.4",
+        "mpdf/mpdf": "^8.2",
+        "ianw/quickchart": "^1.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.7"
